--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pillow==12.0.0
 pycparser==2.23
 pydyf==0.11.0
 pyphen==0.17.2
+python-dotenv==1.2.1
 six==1.17.0
 SQLAlchemy==2.0.29
 tinycss2==1.5.1
