--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cssselect2==0.8.0
 Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
 fonttools==4.60.1
+gunicorn==22.0.0
 greenlet==3.2.4
 html5lib==1.1
 itsdangerous==2.2.0
